--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.example.sinemo'
-    compileSdk 32
+    compileSdk 31
 
     defaultConfig {
         applicationId "com.example.sinemo"
         minSdk 26
-        targetSdk 32
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -47,7 +47,7 @@ android {
 }
 
 dependencies {
-
+    implementation 'org.telegram:passport:1.1'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
