--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ android {
 }
 
 dependencies {
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
     implementation 'org.telegram:passport:1.1'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
