--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar"
-            tools:ignore="RedundantLabel">
+            tools:ignore="LockedOrientationActivity,RedundantLabel"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
